// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-hrtsrO fTFjtL"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-OzCKV iHXfJD"
    size="small"
  >
    <input
      checked={true}
      className="sc-iopHby iajCpf"
      id="test-switch-1"
      onChange={[Function]}
      size="small"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-gvTkRN TjTWY"
      size="small"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
Array [
  <div
    className="sc-hrtsrO fTFjtL"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-OzCKV juwdJy"
      size="medium"
    >
      <input
        checked={true}
        className="sc-iopHby iajCpf"
        id="button-switch-1"
        onChange={[Function]}
        size="medium"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gvTkRN evwkBX"
        size="medium"
      >
        <span
          className="sc-RryNr emqFcC"
        >
          <p
            className="sc-jUwIko gxSaBZ"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-jUwIko gxSaBZ"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>,
  <div
    className="sc-hrtsrO fTFjtL"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-OzCKV hRLkNZ"
      size="large"
    >
      <input
        checked={true}
        className="sc-iopHby iajCpf"
        id="button-switch-2"
        onChange={[Function]}
        size="large"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gvTkRN evwkBX"
        size="large"
      >
        <span
          className="sc-RryNr emqFcC"
        >
          <p
            className="sc-jUwIko gxSaBZ"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-jUwIko gxSaBZ"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Switch renders Disabled state 1`] = `
Array [
  <div
    className="sc-hrtsrO fTFjtL"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-OzCKV lZGku"
      disabled={true}
      size="small"
    >
      <input
        checked={true}
        className="sc-iopHby iajCpf"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gvTkRN TjTWY"
        size="small"
      />
    </label>
  </div>,
  <div
    className="sc-hrtsrO fTFjtL"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-OzCKV lZGku"
      disabled={true}
      size="small"
    >
      <input
        checked={false}
        className="sc-iopHby iajCpf"
        id="test-switch-disabled"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-gvTkRN crDCbo"
        size="small"
      />
    </label>
  </div>,
]
`;

exports[`Switch renders Theme variant 1`] = `
Array [
  <div
    className="sc-hrtsrO fTFjtL"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-OzCKV fKhUHt"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-iopHby ikXcUm"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gvTkRN cDkbRg"
        size="twoxsmall"
      />
    </label>
  </div>,
  <div
    className="sc-hrtsrO fTFjtL"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-OzCKV cQYKLm"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-iopHby iYRahi"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gvTkRN eGTbAv"
        size="xsmall"
      />
    </label>
  </div>,
  <div
    className="sc-hrtsrO fTFjtL"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-OzCKV iHXfJD"
      size="small"
    >
      <input
        checked={true}
        className="sc-iopHby iYRahi"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gvTkRN bDkXCw"
        size="small"
      />
    </label>
  </div>,
]
`;

exports[`Switch renders different Sizes 1`] = `
Array [
  <div
    className="sc-hrtsrO fTFjtL"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-OzCKV fKhUHt"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-iopHby mXGFv"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gvTkRN gqCJAo"
        size="twoxsmall"
      />
    </label>
  </div>,
  <div
    className="sc-hrtsrO fTFjtL"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-OzCKV cQYKLm"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-iopHby iajCpf"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gvTkRN gRJwIr"
        size="xsmall"
      />
    </label>
  </div>,
  <div
    className="sc-hrtsrO fTFjtL"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-OzCKV iHXfJD"
      size="small"
    >
      <input
        checked={true}
        className="sc-iopHby iajCpf"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gvTkRN TjTWY"
        size="small"
      />
    </label>
  </div>,
]
`;
